# Xshell

./: .clangd  .gitignore  .gitmodules  README.md  meson.build
src/: config.h  main.c  meson.build  xshell.c  xshell.h
src/struct/: array.c  array.h  meson.build
subprojects/: .gitignore
